Fixed overlay z-index covering other elements

--- a/src/styles/Button.module.scss
+++ b/src/styles/Button.module.scss
@@ -1,4 +1,6 @@
 .buttonField {
+    z-index: 1;
+
     position: relative;
     background-color: rgba(0, 0, 0, 0.3);
     text-align: center;
