--- a/src/styles/Canvas.module.scss
+++ b/src/styles/Canvas.module.scss
@@ -1,4 +1,6 @@
 .container {
+    z-index: 1;
+
     display: flex;
     justify-content: center;
     align-items: center;
