--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,4 +1,6 @@
 .main {
+    z-index: -1;
+
     min-height: 100vh;
     min-width: 100vw;
 
