--- a/src/styles/HomeInfoText.module.scss
+++ b/src/styles/HomeInfoText.module.scss
@@ -1,4 +1,6 @@
 .text {
+    z-index: 1;
+
     text-align: center;
     font-size: 1.2em;
     
