--- a/src/styles/HomeTitle.module.scss
+++ b/src/styles/HomeTitle.module.scss
@@ -1,4 +1,6 @@
 .title {
+    z-index: 1;
+
     color: white;
     text-align: center;
     font-size: 3em;
