--- a/src/styles/InputField.module.scss
+++ b/src/styles/InputField.module.scss
@@ -1,4 +1,6 @@
 .inputField {   
+    z-index: 1;
+
     text-align: center;
     font-size: 1.2em;
     
