--- a/src/styles/Overlay.module.scss
+++ b/src/styles/Overlay.module.scss
@@ -1,4 +1,6 @@
 .overlay {
+    z-index: 0;
+
     position: fixed;
     top: 0;
     left: 0;
